# local_customgui-for-window

./: .env.example  .gitignore  CODEX.md  README.md  STREAMLIT_PLAN.md  app.py  config.json  index.html  pyproject.toml  requirements-pycaret.txt  requirements.txt  run.sh  run_streamlit.sh  streamlit_app.py
.streamlit/: config.toml
docs/: CODEX.md  manual_installation.md  project_summary.md  source_notes.md
docs/user_guide/: README.md  classification-training.md  excel-summary.md  performance-comparison.md  report-generation.md  saved-classification-prediction.md
packaging/: build_windows_delete.ps1  build_windows_launcher.ps1  build_windows_manager.ps1  build_windows_setup.ps1  windows_delete_launcher.py  windows_launcher.py  windows_manager_launcher.py  windows_setup_launcher.py
packaging/windows/: build_windows_delete.ps1  build_windows_launcher.ps1  build_windows_manager.ps1  build_windows_setup.ps1  windows_delete_launcher.py  windows_manager_launcher.py  windows_setup_launcher.py
scripts/: run.sh  run_streamlit.sh
serving/: HD_LLM.ipynb  Reg_extracted.xlsx  class_extracted.xlsx  codex_project_prompt_hd_serving.txt  dataset_LE6_clean.xlsx  dataset_RN3_clean.xlsx
src/hd_serving/: __init__.py  artifacts.py  constants.py  data_loader.py  explanation.py  inference.py  llm_client.py  nemoclaw_vllm_runtime.py  orchestrator.py  preprocessing.py  pycaret_bridge.py  pycaret_worker.py  schema.py  (+4 more)
static/: app.js  style.css
tests/: test_inference.py  test_preprocessing.py  test_schema.py  test_tools.py  test_training_smoke.py
tutorial_video/: README.md
(+22 files in other folders)
