[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hd-serving"
version = "0.1.0"
description = "HD Hyundai Electric local ML serving with deterministic tools and local LLM chat"
requires-python = ">=3.10,<3.13"
dependencies = [
  "streamlit>=1.56.0",
  "pandas>=2.1.0,<2.2.0",
  "numpy>=1.26.0,<1.27.0",
  "scikit-learn>=1.4.0,<1.5.0",
  "joblib>=1.3.0,<1.4.0",
  "openpyxl>=3.1.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "xlsxwriter>=3.2.0",
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
